# capitangains

./: .gitignore  LICENSE  Makefile  README.org  pyproject.toml
src/capitangains/cmd/: cli.py  generate_ibkr_report.py  generate_report.py
src/capitangains/conv/: __init__.py  conv.py
src/capitangains/core/: __init__.py  conv.py  logging.py
src/capitangains/logging/: config.py  logging.py
src/capitangains/model/: __init__.py  ibkr.py
src/capitangains/reporting/: __init__.py  events.py  extract.py  fifo.py  fifo_domain.py  fx.py  gap_policy.py  money.py  positions.py  realized_builder.py  reconcile.py  report_builder.py  report_sink.py  trade_math.py
tests/: conftest.py  fixtures.py  test_conv.py  test_dividends_parsing.py  test_event_sort_key.py  test_events.py  test_extract_utils.py  test_fifo_components.py  test_fifo_gap_fix.py  test_fifo_matcher.py  test_fx.py  test_interest_parsing.py  test_money_trade_math.py  test_parser_edges.py  test_reconcile.py  test_report_builder_sink.py  test_reporting.py  test_summary_and_formats.py  test_syep_interest_parsing.py  test_trades_parsing.py  test_transfers_parsing.py  test_withholding_tax_parsing.py
